# docs/swagger.yaml
@@ -300,6 +300,47 @@ paths:
       summary: Присоединение к команде
       tags:
       - team
+  /team/leave:
+    get:
+      consumes:
+      - application/json
+      description: Позволяет пользователю выйти из текущей команды
+      parameters:
+      - description: Уникальный идентификатор Telegram
+        in: query
+        name: telegram_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Команда успешно покинута
+          schema:
+            $ref: '#/definitions/response.SuccessResponse'
+        "400":
+          description: Отсутствует telegram_id
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Пользователь не найден
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "403":
+          description: Manager не может просто так покинуть команду
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: 'Error: Отсутствует команда у пользователя Code: USER_HAS_NO_TEAM'
+          schema:
+            $ref: '#/definitions/response.ErrorCodeResponse'
+        "500":
+          description: Ошибка при попытке покинуть команду
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Покинуть команду
+      tags:
+      - team
   /team/members:
     get:
       consumes:
