# main.go
@@ -52,6 +52,7 @@ func main() {
 	r.GET("/team/my", team.GetMyTeamHandler)
 	r.GET("/team/invite", team.GetLinkTeamHandler)
 	r.GET("/team/members", team.GetMembersTeam)
+	r.GET("/team/leave", team.LeaveMemberTeamHandler)
 	r.PUT("/team", team.ChangeTeamHandler)
 	//
 
